removed gradient js, changed hamurger bg back to transparent

--- a/wp-content/themes/stacylauren/sass/layout/_global.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_global.scss
@@ -27,7 +27,7 @@
 
 #body_bg {
 	background-color: $lime-green;	
-	background-image: linear-gradient(134deg, #e3f816, $lime-green, $teal, $purple, $pink);
+	background-image: linear-gradient(134deg, $lime-green, $green, $teal, $purple, $pink);
 	background-repeat: repeat;
 	background-size: 1000% 1000%;
 	background-attachment: fixed;
@@ -53,6 +53,7 @@
 
 #bg {
 	background: url(img/bg3.png) repeat;
+	z-index: 100;	
 }
 
 .bg {
