--- a/wp-content/themes/stacylauren/sass/navigation/_menus.scss
+++ b/wp-content/themes/stacylauren/sass/navigation/_menus.scss
@@ -157,7 +157,7 @@ body, html {
         line-height: 44px;
     }
 
-.hamburger {
+button.hamburger {
     background: transparent;
     border: none;
     display: block;
