--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -1024,7 +1024,7 @@ textarea#comment {
 }*/
 #body_bg {
 	background-color: #D9E021;
-	background-image: linear-gradient(134deg, #e3f816, #D9E021, #00B0B0, #93278F, #D4145A);
+	background-image: linear-gradient(134deg, #D9E021, #78A22F, #00B0B0, #93278F, #D4145A);
 	background-repeat: repeat;
 	background-size: 1000% 1000%;
 	background-attachment: fixed;
@@ -1056,6 +1056,7 @@ textarea#comment {
 /*}*/
 #bg {
 	background: url(img/bg3.png) repeat;
+	z-index: 100;
 }
 
 .bg {
@@ -1610,7 +1611,7 @@ body, html {
 	line-height: 44px;
 }
 
-.hamburger {
+button.hamburger {
 	background: transparent;
 	border: none;
 	display: block;
@@ -1624,7 +1625,7 @@ body, html {
 }
 
 @media (min-width: 768px) {
-	.hamburger {
+	button.hamburger {
 		margin: 0 20px 0 50px;
 	}
 }
