styled meta, post nav, etc.

--- a/wp-content/themes/stacylauren/sass/forms/_fields.scss
+++ b/wp-content/themes/stacylauren/sass/forms/_fields.scss
@@ -20,7 +20,7 @@ textarea {
 	border-radius: 2px;
 	&:focus {
 		color: $color__text-input-focus;
-		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba($lime-green, 0.75);
+		/*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba($lime-green, 0.75);*/
   		outline: 0 none;
 	}
 }
@@ -34,7 +34,7 @@ select, select[multiple] {
 	border-radius: 2px !important;
 	&:focus, &:active, &:focus-within {
 		color: $color__text-input-focus;
-		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba($lime-green, 0.75) ;
+		/*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba($lime-green, 0.75);*/
   		outline: 0 none;		
 	}
 }
@@ -62,10 +62,10 @@ textarea#comment {
 	select[multiple], select, {
 		width: 100%;
 		option:hover, option:active, option:focus, option:focus-within {
-			background-color: $lime-green;
+			background-color: $lightgray;
 		}
 		option:focus, option:focus-within {
-			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba($lime-green, 0.75);
+			/*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba($lime-green, 0.75);*/
 	  		outline: 0 none;				
 		}
 	}
