--- a/wp-content/themes/stacylauren/sass/media/_media.scss
+++ b/wp-content/themes/stacylauren/sass/media/_media.scss
@@ -14,6 +14,20 @@ object {
 	max-width: 100%;
 }
 
+.video {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /* Make sure logo link wraps around logo image. */
 .custom-logo-link {
 	display: inline-block;
