--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -1060,9 +1060,16 @@ textarea#comment {
 
 #body_bg {
 	overflow-x: hidden !important;
-	background: url(img/bg3.png) 50% repeat, linear-gradient(134deg, #D9E021, #0df3e8, #93278F, #D4145A, #de9a18) repeat;
+	background: url(img/bg3.png) 50% repeat fixed, linear-gradient(134deg, #D9E021, #0df3e8, #93278F, #D4145A, #de9a18) repeat;
 	background-size: 600px auto ,1000% auto;
 	animation: bg-grad 90s infinite alternate linear;
+}
+
+@media (max-width: 767px) {
+	#body_bg {
+		background: url(img/bg3.png) 50% repeat initial, linear-gradient(134deg, #D9E021, #0df3e8, #93278F, #D4145A, #de9a18) repeat;
+		background-size: 400px auto , 2000% auto;
+	}
 }
 
 @keyframes bg-grad {
@@ -1943,6 +1950,18 @@ button.hamburger {
 	}
 }
 
+article.sticky h2 ::before {
+	content: '\f004' !important;
+	font-family: FontAwesome !important;
+	font-weight: normal !important;
+	font-style: normal !important;
+	margin: 0 10px 0px -1em !important;
+	background: #0df3e8;
+	text-decoration: none !important;
+	padding: 0.15em .15em .15em .25em;
+	color: white;
+}
+
 h2.entry-title {
 	font-size: 2em;
 }
@@ -2108,6 +2127,17 @@ ul.post-categories li a:hover {
 	color: black;
 	font-size: 1.4em;
 	margin-top: 1em;
+}
+
+.project-excerpt a {
+	font-weight: 800;
+	color: black;
+}
+
+.project-excerpt a:hover {
+	transition: all 0.7s ease-in-out;
+	text-decoration: none;
+	color: #78A22F;
 }
 
 /* Caption Hoover Effects */
@@ -2357,6 +2387,13 @@ a.post-edit-link:hover {
 	color: #78A22F;
 }
 
+@media (max-width: 480px) {
+	.about-img {
+		clear: both;
+		width: 100%;
+	}
+}
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
@@ -2505,6 +2542,22 @@ embed,
 iframe,
 object {
 	max-width: 100%;
+}
+
+.video {
+	position: relative;
+	padding-bottom: 56.25%;
+	/* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+.video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /* Make sure logo link wraps around logo image. */
