added editor styles and screenshot to theme

--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -165,6 +165,53 @@ ul.post-categories {
   }
 }
 
+ul.project-categories {
+  list-style-type: none !important;
+  margin: 0 0 .5em 0;
+  padding: 0;
+  li {
+    margin: 0 !important;
+    display: inline-block !important;
+    a {
+      background: $lime-green !important;
+      padding: .25em .5em !important;
+      margin-right: .5em;
+      &:hover {
+  				transition: $transition !important;        
+  				background: $darkgray !important;
+  				color: white !important;
+  			}
+    }		
+  }
+  @media ($screen-xs) {
+    margin: 1em 0;
+  }
+}
+
+ul.project-tags {
+  font-size: .8em;
+  list-style-type: none !important;
+  margin: 0 0 1em 0;
+  padding: 0;
+  li {
+    margin: 0 !important;
+    display: inline-block !important;
+    /*a {
+      background: $medgray !important;
+      padding: .25em .5em !important;
+      margin-right: .5em;
+      &:hover {
+  				transition: $transition !important;        
+  				background: $darkgray !important;
+  				color: white !important;
+  			}
+    }	*/	
+  }
+  @media ($screen-xs) {
+    margin: 1em 0;
+  }
+}
+
 .comments-area {
   background: $darkgray;
   margin: 0;
