changted heading colors

--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -53,6 +53,7 @@
     	font-family: $accent-font;	
     	text-transform: none;
     	margin: -32px 0 0;
+    	color: black;
     	@media ($screen-xs) {
     	  font-size: 6em;
     	}
