--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -673,23 +673,6 @@ input[type="submit"] {
 	font-weight: 800;
 	border-style: none;
 	transition: all 0.7s ease-in-out;
-	/*	border: 1px solid;
-	border-color: $color__border-button;
-	border-radius: 3px;
-	background: $color__background-button;
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
-	line-height: 1;
-	padding: .6em 1em .4em;
-
-	&:hover {
-		border-color: $color__border-button-hover;
-	}
-
-	&:active,
-	&:focus {
-		border-color: $color__border-button-focus;
-	}*/
 }
 
 button:hover,
@@ -904,6 +887,7 @@ textarea#comment {
 	padding: 10px;
 	margin: .5em auto 0 auto;
 	width: 100%;
+	background: white;
 }
 
 .wpcf7-form input[type="submit"] {
@@ -911,6 +895,12 @@ textarea#comment {
 	display: block;
 	padding: .25em .5em;
 	margin: 0 auto;
+	background-color: #D9E021 !important;
+}
+
+.wpcf7-form input[type="submit"]:hover {
+	background: #626262 !important;
+	color: white !important;
 }
 
 .wpcf7-form select[multiple], .wpcf7-form select {
