--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -42,7 +42,7 @@
     min-height: 300px;
     z-index: 10;
 		padding: 5em 1em;
-	display: flex;
+	  display: flex;
 	align-items: center;
     justify-content: center;
     /*background: rgba(255, 255, 255, .85);*/
@@ -50,6 +50,7 @@
     text-align: center;
     h1 {
     	font-size: 7em;
+    	line-height: 1em;
     	font-family: $accent-font;	
     	text-transform: none;
     	margin: -32px 0 0;
