--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -1380,29 +1380,18 @@ textarea#comment {
 	margin: 0;
 }
 
-/*.site-footer {
-	background-color: rgba(0, 0, 0, 0.15);
-	padding: 15px;
-	z-index: 99;
+.top {
+	width: 50px;
+	position: fixed;
+	right: 5%;
+	bottom: 0;
+	background: #5B5B5B;
+	background: rgba(35, 31, 32, 0.15);
+	z-index: 99999;
 	text-align: center;
-	color: $lightgray;
-	font-size: .8em;
-	box-sizing: border-box;
-	width: 100%;;
-	flex-shrink: 0;
-	a {
-    font-family: $secondary-font;
-    color: white !important;
-    text-decoration: none;
-    transition: .5s background-color;
-	    &:hover {
-	    	color:$green !important;
-	    }
- 	}
- 	p {
- 	    margin: 0;
- 	}
-}*/
+	padding: 5px;
+}
+
 .screen-reader-text {
 	position: absolute;
 	top: -9999em;
