fixed margin on entry footer links

--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -522,7 +522,7 @@ a.next, .nav-next a{
     color: $medgray !important;
     background: rgba(0, 0, 0, .15) !important;
     padding: .25em .5em !important;
-    margin: 0 .5em !important;
+    margin: .25em .5em !important;
 
     &:hover {
       background: rgba(0, 0, 0, 1) !important;
