--- a/wp-content/themes/stacylauren/sass/layout/_footer.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_footer.scss
@@ -116,13 +116,14 @@
 	padding: 15px;
 	z-index: 99;
 	text-align: center;
-	color: $lightgray;
+	color: white;
 	font-size: .8em;
 	box-sizing: border-box;
 	width: 100%;;
 	flex-shrink: 0;
 	a {
     font-family: $secondary-font;
+    font-weight: 800;
     color: white !important;
     text-decoration: none;
     transition: .5s background-color;
