--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -265,7 +265,7 @@ ul.project-tags {
 .single-project {
     column-count: 1 !important;
     img {
-      width: 100%;
+      max-width: 100%;
       height: auto;
       margin-bottom: 6px;
     }
