--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -1357,7 +1357,7 @@ textarea#comment {
 	padding: 15px;
 	z-index: 99;
 	text-align: center;
-	color: #e3e3e3;
+	color: white;
 	font-size: .8em;
 	box-sizing: border-box;
 	width: 100%;
@@ -1367,6 +1367,7 @@ textarea#comment {
 
 .copyright a {
 	font-family: "Montserrat", Helvetica, Arial, sans-serif;
+	font-weight: 800;
 	color: white !important;
 	text-decoration: none;
 	transition: .5s background-color;
@@ -2171,7 +2172,7 @@ ul.project-tags li {
 }
 
 .single-project img {
-	width: 100%;
+	max-width: 100%;
 	height: auto;
 	margin-bottom: 6px;
 }
