couple more css tweaks

--- a/wp-content/themes/stacylauren/sass/navigation/_menus.scss
+++ b/wp-content/themes/stacylauren/sass/navigation/_menus.scss
@@ -87,6 +87,7 @@ body, html {
         line-height: 20px;
         position: relative;
         width: 100%;
+        margin-bottom: 0;
     }
 
         .sidebar-nav li:before {
