added caption to featured images

--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -581,3 +581,10 @@ a.post-edit-link{
     width: 100%;
   }
 }
+
+.featured-image-caption {
+  font-size: .8em;
+  font-style: italic;
+  color: $medgray;
+  margin-bottom: 1em;
+}
